@@ -18,80 +18,66 @@
 // NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE 
 // POSSIBILITY OF SUCH DAMAGE.
 
-using System;
-
-namespace NGChart
+namespace NGChart.QR
 {
     /// <summary>
-    /// QR encoding types
+    /// Error correction level
+    /// 
+    /// http://code.google.com/apis/chart/#ec_level_table
     /// </summary>
-    public enum QREncodingType
+    public enum ErrorCorrectionLevel
     {
         /// <summary>
-        /// Shift_JIS encoding
+        /// Allows 7% of a QR code to be restored
         /// </summary>
-        Shift_JIS,
+        L,
 
         /// <summary>
-        /// UTF-8 encoding
+        /// Allows 15% of a QR code to be restored
         /// </summary>
-        UTF8,
+        M,
 
         /// <summary>
-        /// ISO-8859-1 encoding
+        /// Allows 25% of a QR code to be restored
         /// </summary>
-        ISO_8859_1
+        Q,
+
+        /// <summary>
+        /// Allows 30% of a QR code to be restored
+        /// </summary>
+        H
     }
 
     /// <summary>
-    /// QR encoding type parameter
+    /// Options for QR code generation
     /// </summary>
-    public class QREncodingTypeParam : ChartParam
+    public class QROptions : ChartParam
     {
-        private readonly QREncodingType _encoding;
+        #region Constants
 
         /// <summary>
-        /// Constructor
+        /// The default margin is 4 modules. This means a blank space equivalent to four rows at the top and bottom and 
+        /// four columns on the left and right are placed around the QR code. This is the minimum required by QR readers.
         /// </summary>
-        /// <param name="encoding">QR encoding type</param>
-        public QREncodingTypeParam(QREncodingType encoding)
-        {
-            _encoding = encoding;
-        }
+        public const int MinimalMargin = 4;
 
-        /// <summary>
-        /// Converts encoding type to its string representation
-        /// </summary>
-        /// <param name="encoding"></param>
-        /// <returns></returns>
-        public static string ConvertEncodingType(QREncodingType encoding)
-        {
-            string result;
+        #endregion
 
-            switch(encoding)
-            {
-                case QREncodingType.Shift_JIS:
-                    result = "Shift_JIS";
-                    break;
-                case QREncodingType.UTF8:
-                    result = "UTF-8";
-                    break;
-                case QREncodingType.ISO_8859_1:
-                    result = "ISO-8859-1";
-                    break;
-                default:
-                    throw new ArgumentOutOfRangeException("encoding");
-            }
+        #region Private stuff
 
-            return result;
-        }
+        private readonly ErrorCorrectionLevel _errorCorrectionLevel;
+        private readonly int _margin;
+
+        #endregion
+
+        #region Overrides
 
         /// <summary>
         /// Name of the parameter
         /// </summary>
         public override string Name
         {
-            get { return "choe"; }
+            get { return "chld"; }
         }
 
         /// <summary>
@@ -99,7 +85,29 @@ namespace NGChart
         /// </summary>
         public override string Data
         {
-            get { return ConvertEncodingType(_encoding); }
+            get
+            {
+                return string.Format("{0}|{1}", _errorCorrectionLevel, _margin);
+            }
         }
+
+        #endregion
+
+        #region Constructor
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="QROptions"/> class.
+        /// </summary>
+        /// <param name="ec">Error correction level.</param>
+        /// <param name="margin">The margin (or blank space) around the QR code.</param>
+        public QROptions(ErrorCorrectionLevel ec, int margin)
+        {
+            _errorCorrectionLevel = ec;
+
+            // autocorrect margin if necessary
+            _margin = margin > MinimalMargin ? margin : MinimalMargin;
+        }
+
+        #endregion
     }
 }
